@@ -1,3 +1,8 @@
+2011-08-29  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/50116
+	* varasm.c (decode_addr_const): Handle MEM_REF[&X, OFF].
+
 2011-08-27  Uros Bizjak  <ubizjak@gmail.com>
 
 	* config/i386/sse.md (vec_extract_lo_<mode>): Prevent both
